@@ -4,7 +4,7 @@
     <packaging>pom</packaging>
     <groupId>com.javax0.geci</groupId>
     <artifactId>javageci-parent</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.1-SNAPSHOT</version>
     <name>javageci-parent</name>
     <description>Java GEnerate Code Inline source code generation framework</description>
     <modules>
@@ -70,6 +70,7 @@
                             --add-opens geci.examples/javax0.geci.tests.builder=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tests.cloner=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tests.configBuilder=ALL-UNNAMED
+                            --add-opens geci.docugen/javax0.geci.docugen=ALL-UNNAMED
                             --add-exports geci.examples/javax0.geci.tutorials.simple=geci.core
                             --add-exports geci.examples/javax0.geci.tests.fluent=geci.tools
                             --add-exports geci.examples/javax0.geci.tests.fluent=geci.core
@@ -140,37 +141,37 @@
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-api</artifactId>
-                <version>1.2.0-SNAPSHOT</version>
+                <version>1.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-core</artifactId>
-                <version>1.2.0-SNAPSHOT</version>
+                <version>1.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-tools</artifactId>
-                <version>1.2.0-SNAPSHOT</version>
+                <version>1.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-engine</artifactId>
-                <version>1.2.0-SNAPSHOT</version>
+                <version>1.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-annotation</artifactId>
-                <version>1.2.0-SNAPSHOT</version>
+                <version>1.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-docugen</artifactId>
-                <version>1.2.0-SNAPSHOT</version>
+                <version>1.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-core-annotations</artifactId>
-                <version>1.2.0-SNAPSHOT</version>
+                <version>1.2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -182,6 +183,17 @@
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>5.5.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.javax0.jamal</groupId>
+                <artifactId>jamal-engine</artifactId>
+                <version>1.0.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.javax0.jamal</groupId>
+                <artifactId>jamal-testsupport</artifactId>
+                <version>1.0.3</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
